--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ParkSunA
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
+description: 매일 공부한 것을 기록
+author: 박선아
 avatar: /logo.jpg
 email: psa199402@gmail.com
 
