--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: ParkSunA
 description: 매일 공부한 것을 기록
-author: 박선아
+user: SunA
+author: ngzhio
 avatar: /logo.jpg
 email: psa199402@gmail.com
 
